--- a/csharp/ProjectEuler.csproj
+++ b/csharp/ProjectEuler.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Helpers\FibonacciHelper.cs" />
     <Compile Include="Helpers\MathHelpers.cs" />
     <Compile Include="Helpers\PrimeHelpers.cs" />
+    <Compile Include="P11_to_20\P20.cs" />
+    <Compile Include="P11_to_20\P19.cs" />
+    <Compile Include="P11_to_20\P18.cs" />
     <Compile Include="P11_to_20\P17.cs" />
     <Compile Include="P11_to_20\P16.cs" />
     <Compile Include="P11_to_20\P15.cs" />
@@ -73,12 +76,20 @@
     <Compile Include="P1_to_10\P8.cs" />
     <Compile Include="P1_to_10\P7.cs" />
     <Compile Include="P1_to_10\P6.cs" />
+    <Compile Include="P21_to_30\P23.cs" />
+    <Compile Include="P21_to_30\P22.cs" />
+    <Compile Include="P21_to_30\P21.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="P21_to_30\InputFiles\p22.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
